--- a/template/index.html
+++ b/template/index.html
@@ -290,7 +290,7 @@
 
 
         // Make the API call using fetch
-        fetch(`https://chatbot-3-t4ve.onrender.com/api/v0/ask?question=${encodeURIComponent(userMessage)}`, {
+        fetch(`https://chatbot-nwvf.onrender.com/api/v0/ask?question=${encodeURIComponent(userMessage)}`, {
             method: 'GET',
             headers: {
                 'Content-Type': 'text/plain',  // Adjust the content type if needed
