typing spelling changed

--- a/template/index.html
+++ b/template/index.html
@@ -255,7 +255,7 @@
         <ul class="chatbox">
             <li class="chat incoming">
                 <span class="material-symbols-outlined">smart_toy</span>
-                <p>Hi there 👋<br>Your connected with Meghna</p>
+                <p>Hi there 👋<br>Your connected with AI</p>
             </li>
         </ul>
         <div class="chat-input">
@@ -328,7 +328,7 @@
 
             setTimeout(() => {
                 // Display "Thinking..." message while waiting for the response
-                const incomingChatLi = createChatLi("Typeing...", "incoming");
+                const incomingChatLi = createChatLi("Typing...", "incoming");
                 chatbox.appendChild(incomingChatLi);
                 chatbox.scrollTo(0, chatbox.scrollHeight);
                 generateResponse(incomingChatLi);
