--- a/template/index.html
+++ b/template/index.html
@@ -255,7 +255,7 @@
         <ul class="chatbox">
             <li class="chat incoming">
                 <span class="material-symbols-outlined">smart_toy</span>
-                <p>Hi there 👋<br>Your connected with AI</p>
+                <p>Hi there 👋<br>You are connected with AI</p>
             </li>
         </ul>
         <div class="chat-input">
